# tonejs-mml-to-json

./: .gitignore  CONSOLIDATION.md  IMPLEMENTATION_ISSUE_24.md  IMPLEMENTATION_NOTES_128.md  IMPLEMENTATION_NOTES_135.md  IMPLEMENTATION_NOTES_152.md  IMPLEMENTATION_SUMMARY.md  LIBRARY_USAGE.md  MULTI_TRACK_INVESTIGATION.md  PREVENTION_STRATEGY.md  QUICKSTART.md  README.ja.md  README.md  ROOT_CAUSE_ANALYSIS.md  TREE_SITTER_FINAL_REPORT.md  TREE_SITTER_INVESTIGATION.md  TREE_SITTER_SUMMARY.md  TREE_SITTER_USAGE.md  TYPESCRIPT_MIGRATION.md  WEB_TREE_SITTER_INTEGRATION.md  _config.yml  copilot-instructions.md  index.html  library-usage-example.html  main.js  package-lock.json  package.json  pnpm-lock.yaml  test-chord-basic-node.mjs  test-chord-basic.mjs  test-chord-output.js  test-debug-cst.mjs  test-debug-cst2.mjs  test-debug-cst3.mjs  test-demo-browser.mjs  test-effects.mjs  test-flanger-mml.mjs  test_debug.mjs  tsconfig.json  vitest.config.js
.github/: INVESTIGATION_CHECKLIST.md  check-large-files.toml  copilot-instructions.md
daily-summaries/: 2025-07-14.md  README.md
demo-library/: README.md  index.html  package.json
dev-setup/: README.md  setup.js
generated-docs/: callgraph-enhanced.html  callgraph-org.html  callgraph.csv  callgraph.html  callgraph.js  debug-info.txt  development-status-generated-prompt.md  development-status.md  latest.sarif  project-overview-generated-prompt.md  project-overview.md  project-summary.md  sarif-debug.json
issue-notes/: 1.md  10.md  100.md  101.md  105.md  106.md  11.md  110.md  111.md  115.md  119.md  12.md  121.md  123.md  124.md  126.md  128.md  129.md  13.md  130.md  134.md  135.md  14.md  141.md  143.md  145.md  147.md  15.md  151.md  152.md  153.md  154.md  156.md  158.md  16.md  160.md  163.md  168.md  17.md  170.md  (+71 more)
pkg/: .npmignore  package.json  tonejs_mml_to_json.d.ts  tonejs_mml_to_json.js  (+2 more)
rust/: Cargo.toml  IMPLEMENTATION.md  README.md  build.rs
rust/examples/: basic_usage.rs
rust/src/: ast.rs  ast2json.rs  command.rs  cst_to_ast.rs  effects.rs  grammar.rs  instrument.rs  lib.rs  mml2ast.rs  mml2ast_manual.rs  timing.rs  track.rs
rust/src/ast2json/: tests.rs
rust/src/cst_to_ast/: tests.rs
rust/src/mml2ast/: tests.rs
(+110 files in other folders)
