[package]
name = "tonejs_mml_to_json"
version = "0.1.0"
edition = "2021"
authors = ["cat2151"]
description = "MML to JSON converter for tonejs-json-sequencer"
license = "MIT"
repository = "https://github.com/cat2151/tonejs-mml-to-json"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
rust-sitter = "0.4.5"

[build-dependencies]
rust-sitter-tool = "0.4.5"

[dev-dependencies]
