[package]
name = "tonejs_mml_to_json"
version = "0.1.0"
edition = "2021"
authors = ["cat2151"]
description = "MML to JSON converter for tonejs-json-sequencer"
license = "MIT"
repository = "https://github.com/cat2151/tonejs-mml-to-json"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
tree-sitter = ["dep:tree-sitter", "dep:cc"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
tree-sitter = { version = "0.20", optional = true }

[build-dependencies]
cc = { version = "1.0", optional = true }

[dev-dependencies]
